- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY/MM/DD
- Added OLE and OBJ files detection by content.
- Added optional GIF lossy recompression by adding Gifsicle Lossy (thanks to jibz for the binaries).
- Added INI setting GIFAllowLossy=false to enable lossy GIF optimizations (maadjordan).
- Switched jpeg-recompress method to SmallFry due to better compression ratios than SSIM, at least until it is patented.
- Replaced tidy-html5 4.9.26-191-gb4efe74 with official Tidy 5.1.14 to avoid errors on old Windows versions (maadjordan).
- Added Flash (.fla) format and enhance extension lists to the OLE tool chain (maadjordan).
- Added Revit FAmily file extensions (.rft, .rfa, .rte) to the OLE tool chain (maadjordan).
- Added more OLE extensions from http://www.filesignatures.net: .ac .adp .apr .db .opt .msc .mtw .wps .spo .sou .xla (maadjordan).
- Clarified via tooltip (hint) that Enable Tidy (HTMLEnableTidy INI setting) in the HTML options tab, applies also to SVG (maadjordan).
- Fixed some english typos (thanks Armin).
- Updated to ECT 0.5.0.3 x86 and x64 optimized builds (thanks Malloc Voidstar).


8.40 - 2016/06/17
- Added MIME (.mht .mhtml .eml .emlx .msg .mbx .vcf .vcard) support with Leanify (JoeW).
- Added optional JPEG lossy recompression by adding jpeg-recompress (maadjordan).
- Added INI setting JPEGAllowLossy=false to enable lossy JPEG optimizations (maadjordan).
- Added ZIP SFX installer detection.
- Added InstallShield Wizard and RTPatch Updater detections to exclude processing like we did with Inno Setup (ThisWillDoIt).
- Added Nullsoft Install System detections to exclude processing in EXE chain.
- Added ECT to the MP3 toolchain to optimize embedded images (Skibicki).
- Fixed a bug calling Ghostscript, that ignored parameters after dPDFSETTINGS which should made quality and size better (Skibicki #5).
- Removed generator metatag from tidy output (JoeW).