@@ -11,6 +11,7 @@
 // ---------------------------------------------------------------------------
 TfrmMain *frmMain;
 struct udtOptions gudtOptions;
+SYSTEM_INFO gudtSystemInfo;
 bool gbProcess = false;
 bool gbStop = false;
 
@@ -26,7 +27,6 @@ __fastcall TfrmMain::TfrmMain(TComponent* Owner) : TForm(Owner)
 void __fastcall TfrmMain::FormCreate(TObject *Sender)
 {
 	TCHAR acPath[MAX_PATH];
-	//SYSTEM_INFO udtSystemInfo;
 
 
 	clsUtil::LoadForm(this);
@@ -113,9 +113,10 @@ void __fastcall TfrmMain::FormCreate(TObject *Sender)
 
 
 	SetPriorityClass(GetCurrentProcess(), (unsigned long) gudtOptions.iProcessPriority);
-	//GetSystemInfo(&udtSystemInfo);
-	//udtSystemInfo.dwNumberOfProcessors;
-
+	
+	memset(&gudtSystemInfo, 0, sizeof(gudtSystemInfo));
+	GetSystemInfo(&gudtSystemInfo);
+	
 	UpdateTheme(gudtOptions.acTheme);
 }
 
@@ -775,6 +776,7 @@ void __fastcall TfrmMain::mnuFilesOptimizeFor(TObject *Sender, int iCount)
 			RunPlugin((unsigned int) iCount, "zRecompress", (sPluginsDirectory + "zRecompress.exe -tgz \"%TMPINPUTFILE%\"").c_str(), sPluginsDirectory, sInputFile, "", 0, 0);
 			
 			sFlags = "";
+			sFlags += "--allfilters --mt-deflate=" + (String) gudtSystemInfo.dwNumberOfProcessors + " ";
 			if (!gudtOptions.bGZCopyMetadata)
 			{
 				sFlags = "-strip ";
@@ -916,6 +918,7 @@ void __fastcall TfrmMain::mnuFilesOptimizeFor(TObject *Sender, int iCount)
 			RunPlugin((unsigned int) iCount, "mozjpegtran", (sPluginsDirectory + "mozjpegtran.exe -outfile \"%TMPOUTPUTFILE%\" -progressive " + sFlags + "\"%INPUTFILE%\"").c_str(), sPluginsDirectory, sInputFile, "", 0, 0);
 			
 			sFlags = "";
+			sFlags += "--allfilters --mt-deflate=" + (String) gudtSystemInfo.dwNumberOfProcessors + " ";			
 			if (!gudtOptions.bJPEGCopyMetadata)
 			{
 				sFlags = "-strip ";
@@ -987,6 +990,7 @@ void __fastcall TfrmMain::mnuFilesOptimizeFor(TObject *Sender, int iCount)
 		if (PosEx(sExtensionByContent, KS_EXTENSION_MP3) > 0)
 		{
 			sFlags = "";
+			sFlags += "--allfilters --mt-deflate=" + (String) gudtSystemInfo.dwNumberOfProcessors + " ";
 			if (!gudtOptions.bMP3CopyMetadata)
 			{
 				sFlags = "-strip ";
@@ -1185,6 +1189,7 @@ void __fastcall TfrmMain::mnuFilesOptimizeFor(TObject *Sender, int iCount)
 					RunPlugin((unsigned int) iCount, "advpng", (sPluginsDirectory + "advpng.exe -z -q -4 " + sFlags + "\"%TMPINPUTFILE%\"").c_str(), sPluginsDirectory, sInputFile, "", 0, 0);
 	
 					sFlags = "";
+					sFlags += "--allfilters --mt-deflate=" + (String) gudtSystemInfo.dwNumberOfProcessors + " ";
 					if (!gudtOptions.bPNGCopyMetadata)
 					{
 						sFlags = "-strip ";
